--- a/custom-cursor-guide.html
+++ b/custom-cursor-guide.html
@@ -18,10 +18,10 @@
 
     <div class="main-content">
         <header class="navbar">
-            <a href="../index.html#about">About</a>
-            <a href="../index.html#projects">Projects</a>
-            <a href="../blog.html">Blog</a>
-            <a href="../index.html#contact">Contact</a>
+            <a href="index.html#about">About</a>
+            <a href="index.html#projects">Projects</a>
+            <a href="blog.html">Blog</a>
+            <a href="index.html#contact">Contact</a>
         </header>
 
         <section class="post-content-section">
@@ -102,30 +102,11 @@ animateCursor();</code></pre>
             </div>
         </section>
         
-        <section id="contact" class="contact-section">
-            <h2 class="section-title hidden">Let's Connect</h2>
-            <form class="contact-form hidden" id="contact-form">
-                <div class="form-group">
-                    <input type="text" name="from_name" class="form-input" placeholder="Your Name" required>
-                </div>
-                <div class="form-group">
-                    <input type="email" name="from_email" class="form-input" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                    <textarea name="message" class="form-textarea" placeholder="Your Message" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Send Message</button>
-            </form>
-            <div class="social-links hidden">
-                <a href="https://github.com/rohit978" target="_blank" class="social-link">🐙</a>
-                <a href="#" target="_blank" class="social-link">💼</a>
-                <a href="#" target="_blank" class="social-link">✉️</a>
-                <a href="#" target="_blank" class="social-link">🐦</a>
-            </div>
-        </section>
+        
     </div>
 
-    <script src="../main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
+
