--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
     <!-- Particles background -->
     <div class="particles"></div>
 
+    <!-- Interactive Cat Guide -->
+    <div class="portfolio-cat" id="portfolioCat">
+        <div class="cat-container">
+            <div class="cat-body">
+                <div class="cat-face">
+                    <div class="cat-ear cat-ear-left"></div>
+                    <div class="cat-ear cat-ear-right"></div>
+                    <div class="cat-eye cat-eye-left"></div>
+                    <div class="cat-eye cat-eye-right"></div>
+                    <div class="cat-nose"></div>
+                    <div class="cat-mouth"></div>
+                </div>
+            </div>
+        </div>
+        <div class="cat-speech-bubble" id="catSpeechBubble">
+            <div class="speech-content">
+                <p id="catMessage">Hi! I'm your portfolio guide 🐱<br>Click me for tips!</p>
+            </div>
+            <div class="speech-arrow"></div>
+        </div>
+    </div>
+
     <div class="intro-loader">
         <div class="loader-content">
             <div class="counter-container">
@@ -99,6 +121,17 @@
                 </div>
                 <h3>PrepGen</h3>
                 <p>A comprehensive, AI-powered web application designed as an all-in-one study and exam preparation tool. It leverages AI to dynamically generate personalized learning materials for students.</p>
+            </div>
+
+            <div class="project-card-enhanced hidden">
+                <div class="project-image-container">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='400'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%233651a8;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%23ff6b6b;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='100%25' height='100%25' fill='%231a1a2e'/%3E%3Crect width='100%25' height='100%25' fill='url(%23grad)' opacity='0.3'/%3E%3Ctext x='50%25' y='40%25' font-family='Arial, sans-serif' font-size='48' font-weight='bold' fill='%23618cff' text-anchor='middle' dy='.3em'%3E♪ AURA ♪%3C/text%3E%3Ctext x='50%25' y='60%25' font-family='Arial, sans-serif' font-size='24' fill='%23ccc' text-anchor='middle' dy='.3em'%3EMusic Recommendation System%3C/text%3E%3C/svg%3E" alt="AURA - Music Recommendation System" class="project-image">
+                    <div class="project-overlay">
+                        <a href="https://aura-b5pi.onrender.com/" class="view-project-btn">View Project</a>
+                    </div>
+                </div>
+                <h3>AURA</h3>
+                <p>An intelligent online music recommendation system that combines YouTube scraping with custom machine learning algorithms to deliver personalized music suggestions. Experience music discovery powered by advanced ML models that understand your listening preferences.</p>
             </div>
         </section>
 
